request(block-text-image)#35558: fixed text being cut off.

--- a/src/components/block/block-text-image/block-text-image.sass
+++ b/src/components/block/block-text-image/block-text-image.sass
@@ -46,7 +46,6 @@
         .pages-treatments &
           min-height: 0
       min-height: 20rem
-      overflow: hidden
 
   &__image
     position: absolute
@@ -142,6 +141,7 @@
     opacity: 0
     padding-bottom: 2rem
     max-width: 85%
+    height: fit-content
     line-height: 2
     color: $warm-grey
     transition-delay: .75s
